--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                </div>
                <div class="main__content">
                  <h1>GALLERY </h1>
-                 <h2>Check out all the snaps of the events we've had this year!</h2>
-                 <p>Click the button below to have a look .</p>
+                 <h2>Check out all the snaps of the events this year!</h2>
+                 <p>Click the button to have a look </p>
 
                  <button class="main__btn"><a href="gallery.html">GALLERY</a></button>
                </div>
