--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                <div class="main__content">
                  <h1>GALLERY </h1>
                  <h2>Check out all the snaps of the events this year!</h2>
-                 <p>Click the button to have a look </p>
+                 <p style="position:relative; left:10px;">Click the button to have a look </p>
 
                  <button class="main__btn"><a href="gallery.html">GALLERY</a></button>
                </div>
