--- a/gallery.html
+++ b/gallery.html
@@ -22,8 +22,8 @@
           </div>
 
           <ul class="navbar-menu">
-            <li class="navbar-item"><a class="navbar-link" id="home-page" href="#home">Home</a></li>
-<li class="navbar-item"><a class="navbar-link" id="about-page" href="#about">Gallery</a></li>
+            <li class="navbar-item"><a class="navbar-link" id="home-page" href="index.html">Home</a></li>
+<li class="navbar-item"><a class="navbar-link" id="about-page" href="gallery.html">Gallery</a></li>
 <!-- <li class="navbar-item"><a class="navbar-link" id="services-page" href="#services">Services</a></li> -->
 <li class="navbar-btn"><a class="button" id="signup" href="results.html"  >Results</a></li>
           </ul>
